--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Мебельный магазин</title>
     <link rel="stylesheet" href="css/style.css/">
 </head>
 
 <body>
-    <div class="wrapper">
-        <span class="item">1</span>
-        <span class="item">2</span>
-        <span class="item">3</span>
-        <span class="item">4</span>
-        <span class="item">5</span>
-        <span class="item">6</span>
-        <span class="item">7</span>
-        <span class="item">8</span>
-        <span class="item">9</span>
-        <span class="item">10</span>
-    </div>
+    <header class="header">
+
+        <div class="logo">
+            IC "Repair Design Project"
+        </div>
+        <nav>
+            <ul class="header-navigation">
+                <li class="header-navigation_item"><a href="" class="header-navigation_link">Home</a></li>
+                <li class="header-navigation_item"><a href="" class="header-navigation_link">Projects</a></li>
+                <li class="header-navigation_item"><a href="" class="header-navigation_link">MEASUREMENT</a></li>
+                <li class="header-navigation_item"><a href="" class="header-navigation_link">TEAM</a></li>
+                <li class="header-navigation_item"><a href="" class="header-navigation_link">REVIEWS</a></li>
+                <li class="header-navigation_item"><a href="" class="header-navigation_link"> CONTACTS</a></li>
+            </ul>
+        </nav>
+        <button class="button">Request a call</button>
+    </header>
 </body>
 
 </html>
