--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 
 <body>
     <header class="header">
-
-        <div class="logo">
-            IC "Repair Design Project"
+        <div class="wrapper header-content">
+            <div class="logo">
+                IC "Repair Design Project"
+            </div>
+            <nav>
+                <ul class="header-navigation">
+                    <li><a href="index.html" class="header-navigation_link">Home</a></li>
+                    <li><a href="" class="header-navigation_link">Projects</a></li>
+                    <li><a href="" class="header-navigation_link">MEASUREMENT</a></li>
+                    <li><a href="" class="header-navigation_link">TEAM</a></li>
+                    <li><a href="" class="header-navigation_link">REVIEWS</a></li>
+                    <li><a href="" class="header-navigation_link"> CONTACTS</a></li>
+                </ul>
+            </nav>
+            <button class="button button_it">Request a call</button>
         </div>
-        <nav>
-            <ul class="header-navigation">
-                <li class="header-navigation_item"><a href="" class="header-navigation_link">Home</a></li>
-                <li class="header-navigation_item"><a href="" class="header-navigation_link">Projects</a></li>
-                <li class="header-navigation_item"><a href="" class="header-navigation_link">MEASUREMENT</a></li>
-                <li class="header-navigation_item"><a href="" class="header-navigation_link">TEAM</a></li>
-                <li class="header-navigation_item"><a href="" class="header-navigation_link">REVIEWS</a></li>
-                <li class="header-navigation_item"><a href="" class="header-navigation_link"> CONTACTS</a></li>
-            </ul>
-        </nav>
-        <button class="button">Request a call</button>
     </header>
 </body>
 
