--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мебельный магазин</title>
-    <link rel="stylesheet" href="https://anna45-75.github.io/modul_18//css/style.css/">
+    <link href="./css/style.css" rel="stylesheet" type="text/css">
+    <style>
+        .hero {
+            background-image: url("images/hero1.jpg");
+            background-size: cover;
+            height: 707px;
+        }
+    </style>
 </head>
 
 <body>
@@ -17,17 +24,90 @@
             </div>
             <nav>
                 <ul class="header-navigation">
-                    <li><a href="index.html" class="header-navigation_link">Home</a></li>
+                    <li><a href="#" class="header-navigation_link">Home</a></li>
                     <li><a href="" class="header-navigation_link">Projects</a></li>
                     <li><a href="" class="header-navigation_link">MEASUREMENT</a></li>
                     <li><a href="" class="header-navigation_link">TEAM</a></li>
                     <li><a href="" class="header-navigation_link">REVIEWS</a></li>
-                    <li><a href="" class="header-navigation_link"> CONTACTS</a></li>
+                    <li><a href="" class="header-navigation_link">CONTACTS</a></li>
                 </ul>
             </nav>
             <button class="button button_it">Request a call</button>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="hero_color">
+                <div class="wrapper ">
+                    <div class="container">
+                        <h1 class="title">Turnkey Repair in the city <span class="gold_title">of Rostov-on-Don</span>
+                        </h1>
+                        Get ready-made turnkey repairs on time<br>
+                        with work time saving up to 45 days and 20% from<br>
+                        cost of materials due to the organization of work
+                        <div class="header_buttom">
+                            <button class="button button_it">CALCULATE THE COST</button>
+                            <button class="button button_he button_it">SUBMIT YOUR APPLICATION</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container_black">
+            <div class="wrapper">
+                <div class="title_black">
+                    <nav>
+                        <ul class="navigation_black header-navigation">
+                            <li><a href="#" class="navigation_black_link">Rostov-on-Don, Admiral</a></li>
+                            <li><a href="" class="navigation_black_link">Sochi Thieves</a></li>
+                            <li><a href="" class="navigation_black_link">Rostov-on-Don Patriotic</a></li>
+                        </ul>
+                    </nav>
+                    <div class="title_black raz">
+                        <img src="./images/image2.png">
+                        <div class="title_black_left">
+                            Completed<br>projects
+                        </div>
+                        <div class="text_black"> Only a small part of the work performed by our company is presented on
+                            the site. For
+                            14 years on in the construction market we have made happy more than 1000 families </div>
+                        <ul class="left_nav header-navigation">
+                            <li class="blok_left">
+                                <div class="black_left">City:</div>
+                                <p>Rostov-on-Don
+                                    LCD admiral</p>
+                            </li>
+                            <li class="blok_left">
+                                <div class="black_left">apartment area:</div>
+                                <p>81 m2</p>
+                            </li>
+                            <li class="blok_left">
+                                <div class="black_left">Repair time:</div>
+                                <p>3.5 months</p>
+                            </li>
+                            <li class="blok_left">
+                                <div class="black_left">Repair Cost:</div>
+                                <p>Upon request</p>
+                            </li>
+                        </ul>
+                        <div class="arrow_box_big">
+                            <div class="arrow_box">
+                                <div class="arrow arrow-left"></div>
+                                <div class="sq w"></div>
+                            </div>
+                            <div class="circle"><a href="#"></a></div>
+                            <div class="circle"><a href=""></a></div>
+                            <div class="circle"><a href=""></a></div>
+                            <div class="arrow_box_right">
+                                <div class="arrow arrow-right"></div>
+                                <div class="sq w"></div>
+                            </div>
+                        </div>
+
+
+                    </div>
+        </section>
+    </main>
 </body>
 
 </html>
