--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мебельный магазин</title>
     <link href="./css/style.css" rel="stylesheet" type="text/css">
-    <style>
-        .hero {
-            background-image: url("images/hero1.jpg");
-            background-size: cover;
-            height: 707px;
-        }
-    </style>
 </head>
 
 <body>
@@ -93,19 +86,48 @@
                         <div class="arrow_box_big">
                             <div class="arrow_box">
                                 <div class="arrow arrow-left"></div>
-                                <div class="sq w"></div>
+                                <div class="sq"></div>
                             </div>
                             <div class="circle"><a href="#"></a></div>
                             <div class="circle"><a href=""></a></div>
                             <div class="circle"><a href=""></a></div>
                             <div class="arrow_box_right">
                                 <div class="arrow arrow-right"></div>
-                                <div class="sq w"></div>
+                                <div class="sq"></div>
                             </div>
                         </div>
-
-
                     </div>
+        </section>
+        <section class="block_video">
+            <h1>online control</h1>
+            <div class="box_video">
+                <div class="sq_gold"></div>
+                <img src="images/vec1.svg">
+                <div class="sq_gold"></div>
+            </div>
+            <div class="im_video">
+                <div class="circle_gold">
+                    <div class="arrow_full"></div>
+                </div>
+            </div>
+        </section>
+        <section class="block_form">
+            <div class="sq_gold1"></div>
+            <p>At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time,
+                you
+                can go to our website and monitor the progress of work in your apartment. You can watch the live
+                broadcast
+                from one of our facilities!
+                Leave a request below and you will receive a link to the broadcast.</p>
+            <form action="#">
+                <fieldset>
+                    <label for="name">Name:</label>
+                    <input id="name" placeholder="What is your name">
+                    <label for="telephone">Phone:</label>
+                    <input id="telephone" placeholder="Your phone number:">
+                    <button class="button button_it">SUMBUT</button>
+                </fieldset>
+            </form>
         </section>
     </main>
 </body>
