--- a/index.html
+++ b/index.html
@@ -129,14 +129,72 @@
                         <label for="telephone" class="n_f">Phone:</label>
                         <input name="telephone" type="phone" placeholder="Your phone number:">
                     </div>
-                    <button class="button button_it">SUMBUT</button>
+                    <button class="button">SUMBUT</button>
                 </div>
                 <label class="gold_chek">
-                    <input type="checkbox" checked="checked" name="agree"><span>I agree to the processing of
-                        personal data</span>
+                    <input type="checkbox" checked="checked" name="agree"><span>I agree to the processing of personal
+                        data</span>
                 </label>
-
             </form>
+        </section>
+        <section class="block_types">
+            <h1>TYPES OF REPAIR</h1>
+            <div class="box_video">
+                <div class="sq_gold"></div>
+                <img src="images/vec2.svg">
+                <div class="sq_gold"></div>
+            </div>
+            <div class="block_types_img">
+                <div class="block_types_img_all">
+                    <img src="images/image_1.jpg">
+                    <div class="block_types_img_list">
+                        <h1>Redecorating</h1>
+                        <ul>
+                            <li>Dismantling of old coatings</li>
+                            <li> Wallpapering </li>
+                            <li> Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                        <button class="button button_big">from 900 rub / m2</button>
+                    </div>
+                </div>
+                <div class="block_types_img_all">
+                    <img src="images/image_2.jpg">
+                    <div class="block_types_img_list">
+                        <h1>Overhaul</h1>
+                        <ul>
+                            <li>Dismantling of old coatings</li>
+                            <li> Wallpapering </li>
+                            <li> Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                        <button class="button button_big">from 1800 rub / m2</button>
+                    </div>
+                </div>
+                <div class="block_types_img_all">
+                    <img src="images/image_3.jpg">
+                    <div class="block_types_img_list">
+                        <h1>Designer Repair</h1>
+                        <ul>
+                            <li>Dismantling of old coatings</li>
+                            <li> Wallpapering </li>
+                            <li> Painting walls and ceilings</li>
+                            <li>Laying flooring</li>
+                            <li>Replacing plumbing</li>
+                            <li>Replacing sockets and switches</li>
+                            <li>Replacing doors</li>
+                        </ul>
+                        <button class="button button_big">from 4000 rub / m2</button>
+                    </div>
+
+                </div>
+            </div>
         </section>
     </main>
 </body>
